--- a/index.html
+++ b/index.html
@@ -483,20 +483,20 @@
             <div class="info">
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
-                <h4>Location:</h4>
-                <p>A108 Adam Street, New York, NY 535022</p>
+                <h4>Localização:</h4>
+                <p>Rio de Janeiro, BRA</p>
               </div>
 
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>info@example.com</p>
+                <p>renan.speniche@gmail.com</p>
               </div>
 
               <div class="phone">
                 <i class="bi bi-phone"></i>
-                <h4>Call:</h4>
-                <p>+1 5589 55488 55s</p>
+                <h4>Telefone:</h4>
+                <p>21 98880-6888</p>
               </div>
 
               <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3679.166962929721!2d-43.45750135225331!3d-22.75918427953673!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x99670655a4216d%3A0xe912df80bd3979ee!2sAv.%20Mal.%20Floriano%20Peixoto%2C%202260%20-%20Centro%2C%20Nova%20Igua%C3%A7u%20-%20RJ%2C%2026210-000!5e0!3m2!1spt-BR!2sbr!4v1691341035387!5m2!1spt-BR!2sbr" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
